--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -238,3 +238,9 @@ body {
 .form-control::placeholder {
   color: #71717a;
 }
+.My-err {
+  color: #dc2626;
+  font-size: 12px;
+  margin-bottom: 0;
+  position: absolute;
+}
